middlewareDeployment/xxl-job/xxl-job-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: xxl-job-ns
spec:
  ports:
  - port: 3306
    name: mysql
  clusterIP: None
  selector:
    app: mysql-public
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xxl-job-db
  namespace: xxl-job-ns
spec:
  selector:
    matchLabels:
      app: mysql-public
  serviceName: "mysql"
  template:
    metadata:
      labels:
        app: mysql-public
    spec:
      containers:
      - name: mysql
        image: shixiaochuangk8s/mysql:8.0.33
        ports:
        - containerPort: 3306

        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: mysql-data

  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "csi-rbd-sc"
      resources:
        requests:
          storage: 5Gi
