middlewareDeployment/xxl-job/xxl-job-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: xxl-job-admin
  namespace: xxl-job-ns
  labels:
    app: xxl-job-admin
spec:
  ports:
    - port: 8800
      name: http
      targetPort: 8800
  clusterIP: None
  selector:
    app: xxl-job-admin
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: xxl-job-admin
  namespace: xxl-job-ns
  labels:
    app: xxl-job-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xxl-job-admin
  serviceName: "xxl-job-admin"
  template:
    metadata:
      labels:
        app: xxl-job-admin
    spec:
      containers:
        - name: xxl-job-admin
          image: xuxueli/xxl-job-admin:2.5.0
          ports:
            - containerPort: 8800
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: xxl-job-admin-data
              mountPath: /app/data
      volumes:
        - name: xxl-job-admin-data
          persistentVolumeClaim:
            claimName: xxl-job-admin-pvc
  volumeClaimTemplates:
    - metadata:
        name: xxl-job-admin-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "csi-rbd-sc"
        resources:
          requests:
            storage: 5Gi
