middlewareDeployment/xxl-job/xxl-job-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xxl-job-admin-svc
  namespace: xxl-job-ns
spec:
  type: ClusterIP
  selector:
    app: xxl-job-admin
  ports:
    - port: 8800
      targetPort: 8800
